# Example-Cross-Compilation

./: CMakeLists.txt  Test.cpp  installPackages.ps1  send_to_target.ps1  toolchain.cmake  vcpkg.json
Mqtt/: CMakeLists.txt
ObserverModel/: CMakeLists.txt  Subject.h
modbus/: CMakeLists.txt  ModbusDevice.cpp  ModbusDevice.h  ModbusRegister.cpp  ModbusRegister.h
myLib/: CMakeLists.txt  MyLib.cpp  MyLib.h
triplets/: arm-linux.cmake
